Add working timer triggered by button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <h1>{{title}}</h1>
 
-<p>{{countdownMinutes}}:{{countdownSeconds}}</p>
+<p>{{displayCounter}}</p>
 
 <button (click)="startCounter()">Start</button>
 
