Add CSS reset file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 
 <h1>{{title}}</h1>
 
-<p>{{displayCounter}}</p>
+<h2>Session 1</h2>
+
+<h3>{{displayCounter}}</h3>
 
 <button (click)="startCounter()">Start</button>
 
