--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,18 @@
 @import url("../styles.css");
+
+h1 {
+    font-size: 4.8rem;
+}
+
+h2 {
+    font-size: 3.2rem;
+    text-decoration: underline;
+}
+
+h3 {
+    font-size: 4.8rem;
+}
+
+button {
+    font-size: 2.8rem;
+}
