Improve layout of basic elements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 
 <h1>{{title}}</h1>
 
-<h2>Session 1</h2>
+<div class="counter-display">
+    <h2>Session 1</h2>
 
-<h3>{{displayCounter}}</h3>
+    <h3>{{displayCounter}}</h3>
+</div>
 
 <button (click)="startCounter()">Start</button>
 
