--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,12 @@
 @import url("../styles.css");
 
+.counter-display {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
 h1 {
     font-size: 4.8rem;
 }
