--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,11 @@
     color: var(--pomodoro-white);
     font-family: sans-serif;
 }
+
+.app-root {
+    margin-top: 19px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+}
