--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,21 @@
 
 <button (click)="startCounter()">Start</button>
 
+<div class="app-settings">
+    <div class="app-settings__field">
+        <p>Session</p>
+        <input type="text"/>
+    </div>
+
+    <div class="app-settings__field">
+        <p>Short Break</p>
+        <input type="text"/>
+    </div>
+
+    <div class="app-settings__field">
+        <p>Long Break</p>
+        <input type="text"/>
+    </div>
+</div>
+
 <router-outlet />
