--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -29,10 +29,12 @@ button {
     height: 59px;
     border-radius: 12px;
     box-shadow: 0 4px 8px 0 rgba(54, 51, 51, 0.65);
+    border-bottom: 3px solid #cccccc;
 }
 
 button:active {
     box-shadow: none;
+    border-bottom: none;
 }
 
 .app-settings {
