Refactor CSS to BEM pattern

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 
-<h1>{{title}}</h1>
+<h1 class="app-title">{{title}}</h1>
 
 <div class="counter-display">
-    <h2>Session 1</h2>
+    <h2 class="counter-display__title">Session 1</h2>
 
-    <h3>{{displayCounter}}</h3>
+    <h3 class="counter-display__value">{{displayCounter}}</h3>
 </div>
 
-<button (click)="startCounter()">Start</button>
+<button class="app-button" (click)="startCounter()">Start</button>
 
 <div class="app-settings">
     <div class="app-settings__field">
