--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,9 @@
 @import url("../styles.css");
 
+.app-title {
+    font-size: 4.8rem;
+}
+
 .counter-display {
     display: flex;
     flex-direction: column;
@@ -7,20 +11,16 @@
     gap: 10px;
 }
 
-h1 {
-    font-size: 4.8rem;
-}
-
-h2 {
+.counter-display__title {
     font-size: 3.2rem;
     text-decoration: underline;
 }
 
-h3 {
+.counter-display__value {
     font-size: 4.8rem;
 }
 
-button {
+.app-button {
     font-size: 2.8rem;
     background: var(--pomodoro-white);
     color: var(--pomodoro-black);
@@ -32,7 +32,7 @@ button {
     border-bottom: 3px solid #cccccc;
 }
 
-button:active {
+.app-button:active {
     box-shadow: none;
     border-bottom: none;
 }
