--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,17 +12,17 @@
 <div class="app-settings">
     <div class="app-settings__field">
         <p>Session</p>
-        <input type="text"/>
+        <input class="app-settings__field__input" type="text"/>
     </div>
 
     <div class="app-settings__field">
         <p>Short Break</p>
-        <input type="text"/>
+        <input class="app-settings__field__input" type="text"/>
     </div>
 
     <div class="app-settings__field">
         <p>Long Break</p>
-        <input type="text"/>
+        <input class="app-settings__field__input" type="text"/>
     </div>
 </div>
 
