Add countdown control

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <h3 class="counter-display__value">{{displayCounter}}</h3>
 </div>
 
-<button class="app-button" (click)="startCounter()">Start</button>
+<button class="app-button" (click)="runCommand()">{{buttonCommand}}</button>
 
 <div class="app-settings">
     <div class="app-settings__field">
