Add counting sessions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <h1 class="app-title">{{title}}</h1>
 
 <div class="counter-display">
-    <h2 class="counter-display__title">Session 1</h2>
+    <h2 class="counter-display__title">Session {{sessionCounter}}</h2>
 
     <h3 class="counter-display__value">{{displayCounter}}</h3>
 </div>
