--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,4 +28,6 @@
 
 <audio #audioPlayer src="assets/Alarm.mp3" preload="auto" type="audio/mpeg"></audio>
 
+<p class="source-text">Source code available at <a href="https://github.com/Silmunia/pomodoro" target="_blank" rel="noopener noreferrer external">Github</a></p>
+
 <router-outlet />
